@@ -239,6 +239,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   the root permission effectively grants all other permissions on a wiki.  Useful
   for debugging and administration.
 * (bug 16979) Tracking categories for __INDEX__ and __NOINDEX__
+* New configuration variable $wgShowPageOnRedlink that can be set to show the page
+  instead of an edit interface when visiting a red link. The value can be specified
+  for specific usergroups and namespaces.
 
 === Bug fixes in 1.16 ===
 
